--- a/debug-pod.yaml
+++ b/debug-pod.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   containers:
     - name: debug
-      image: nicolaka/netshoot
-      command: ["sleep", "3600"]
+      image: curlimages/curl
+      command: ["sh", "-c", "sleep 3600"]
       resources:
         requests:
           memory: "64Mi"
