--- a/flask-deployment.yaml
+++ b/flask-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: flask-app
-          image: tarekadel/k8s-flask-mysql-flaskapp:v6
+          image: tarekadel/k8s-flask-mysql-flaskapp:v10
           ports:
             - containerPort: 80
           resources:
@@ -45,25 +45,26 @@ spec:
                 configMapKeyRef:
                   name: flask-config
                   key: MYSQL_DATABASE_HOST
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            failureThreshold: 30
 
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: 80
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
             periodSeconds: 10
+            failureThreshold: 3
 
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: 80
-            initialDelaySeconds: 15
+            initialDelaySeconds: 20
             periodSeconds: 20
-
-          startupProbe:
-            httpGet:
-              path: /
-              port: 80
-            failureThreshold: 30
-            periodSeconds: 10
-
+            failureThreshold: 3 
