--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,8 +22,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r k8s/base/flaskapp/tests/requirements-tests.txt
+          pip install -r k8s/base/flaskapp/requirements-tests.txt
 
       - name: Run pytest
-        run: pytest k8s/base/flaskapp/tests
+        run: |
+          export PYTHONPATH=$(pwd)
+          pytest k8s/base/flaskapp/tests
 
