--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,12 +25,13 @@ jobs:
           pip install -r k8s/base/flaskapp/tests/requirements-tests.txt
 
       - name: Lint with flake8 and reviewdog
-        env:
-          PATH: $HOME/.local/bin:$PATH
-        run: |
-          curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s -- -b $HOME/.local/bin latest
-          export PATH="$HOME/.local/bin:$PATH"
-          flake8 k8s/base/flaskapp/app.py --format=default | reviewdog -f=flake8 -name="flake8" -reporter=github-pr-review -fail-on-error=false -level=warning
+        uses: reviewdog/action-flake8@v1
+        with:
+          args: "k8s/base/flaskapp/app.py"
+          reporter: github-pr-review
+          fail_on_error: false
+          level: warning
+
 
       - name: Run pytest
         run: |
