solve  Lint with flake8 and reviewdog 3

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,4 +1,4 @@
-name: Run Pytest Only
+name: Run Pytest and Lint
 
 on:
   push:
@@ -24,13 +24,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r k8s/base/flaskapp/tests/requirements-tests.txt
 
-      - name: Lint with flake8 and reviewdog
-        uses: reviewdog/action-flake8@v0.11.0
-        with:
-          args: "k8s/base/flaskapp/app.py"
-          reporter: github-pr-review
-          fail_on_error: false
-          level: warning
+      - name: Lint with flake8
+        run: |
+          flake8 k8s/base/flaskapp/app.py || true
 
 
       - name: Run pytest
