--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,14 +27,13 @@ jobs:
       - name: Show OS info
         run: uname -a
 
-      - name: Install curl and reviewdog, then run flake8 with reviewdog
-        env:
-          PATH: $HOME/.local/bin:$PATH
-        run: |
-          apt-get update && apt-get install -y curl
-          curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s -- -b $HOME/.local/bin latest
-          flake8 k8s/base/flaskapp/app.py --format=default | reviewdog -f=flake8 -name="flake8" -reporter=github-pr-review -fail-on-error=false -level=warning
-
+      - name: Lint with flake8 and reviewdog
+        uses: reviewdog/action-flake8@v3
+        with:
+          args: "k8s/base/flaskapp/app.py"
+          reporter: github-pr-review
+          fail_on_error: false
+          level: warning
 
 
       - name: Run pytest
