--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -40,3 +40,10 @@ jobs:
         run: |
           export PYTHONPATH=$(pwd)
           pytest k8s/base/flaskapp/tests/test_app.py
+
+      - name: Run tests and generate coverage report
+        run: |
+          export PYTHONPATH=$(pwd)
+          coverage run -m pytest k8s/base/flaskapp/tests/test_app.py
+          coverage report --fail-under=80
+          coverage html  # لو عايز التقرير بصيغة html
