--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -46,4 +46,53 @@ jobs:
           export PYTHONPATH=$(pwd)
           coverage run -m pytest k8s/base/flaskapp/tests/test_app.py
           coverage report --fail-under=80
-          
+         
+
+
+      - name: Get latest tag for FlaskApp
+        if: contains(github.event.head_commit.message, '[build-image]')
+        id: flaskapp_tag
+        run: |
+          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-flaskapp/tags?page_size=1 | jq -r '.results[0].name')
+          echo "Latest tag: $latest_tag"
+          if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
+            num=${latest_tag#v}
+            new_tag="v$((num+1))"
+          else
+            new_tag="v1"
+          fi
+          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
+
+      - name: Get latest tag for MySQL
+        if: contains(github.event.head_commit.message, '[build-image]')
+        id: mysql_tag
+        run: |
+          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=1 | jq -r '.results[0].name')
+          echo "Latest tag: $latest_tag"
+          if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
+            num=${latest_tag#v}
+            new_tag="v$((num+1))"
+          else
+            new_tag="v1"
+          fi
+          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
+
+      - name: Log in to Docker Hub
+        if: contains(github.event.head_commit.message, '[build-image]')
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push FlaskApp
+        if: contains(github.event.head_commit.message, '[build-image]')
+        run: |
+          docker build -t tarekadel/k8s-flask-mysql-flaskapp:${{ steps.flaskapp_tag.outputs.new_tag }} k8s/base/flaskapp
+          docker push tarekadel/k8s-flask-mysql-flaskapp:${{ steps.flaskapp_tag.outputs.new_tag }}
+
+      - name: Build & Push MySQL
+        if: contains(github.event.head_commit.message, '[build-image]')
+        run: |
+          docker build -t tarekadel/k8s-flask-mysql-database:${{ steps.mysql_tag.outputs.new_tag }} k8s/base/database
+          docker push tarekadel/k8s-flask-mysql-database:${{ steps.mysql_tag.outputs.new_tag }}
+
