--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -53,7 +53,11 @@ jobs:
         if: contains(github.event.head_commit.message, '[build-image]')
         id: flaskapp_tag
         run: |
-          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-flaskapp/tags?page_size=1 | jq -r '.results[0].name')
+          latest_tag=$(curl -s "https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-flaskapp/tags?page_size=100" \
+            | jq -r '.results[].name' \
+            | grep -E '^v[0-9]+$' \
+            | sort -V \
+            | tail -n 1)
           echo "Latest tag: $latest_tag"
           if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
             num=${latest_tag#v}
@@ -67,7 +71,11 @@ jobs:
         if: contains(github.event.head_commit.message, '[build-image]')
         id: mysql_tag
         run: |
-          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=1 | jq -r '.results[0].name')
+          latest_tag=$(curl -s "https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=100" \
+            | jq -r '.results[].name' \
+            | grep -E '^v[0-9]+$' \
+            | sort -V \
+            | tail -n 1)
           echo "Latest tag: $latest_tag"
           if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
             num=${latest_tag#v}
