--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -49,15 +49,18 @@ jobs:
          
 
 
+      - name: Log in to Docker Hub
+        if: contains(github.event.head_commit.message, '[build-image]')
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Get latest tag for FlaskApp
         if: contains(github.event.head_commit.message, '[build-image]')
         id: flaskapp_tag
         run: |
-          latest_tag=$(curl -s "https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-flaskapp/tags?page_size=100" \
-            | jq -r '.results[].name' \
-            | grep -E '^v[0-9]+$' \
-            | sort -V \
-            | tail -n 1)
+          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-flaskapp/tags?page_size=1 | jq -r '.results[0].name')
           echo "Latest tag: $latest_tag"
           if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
             num=${latest_tag#v}
@@ -71,11 +74,7 @@ jobs:
         if: contains(github.event.head_commit.message, '[build-image]')
         id: mysql_tag
         run: |
-          latest_tag=$(curl -s "https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=100" \
-            | jq -r '.results[].name' \
-            | grep -E '^v[0-9]+$' \
-            | sort -V \
-            | tail -n 1)
+          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=1 | jq -r '.results[0].name')
           echo "Latest tag: $latest_tag"
           if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
             num=${latest_tag#v}
@@ -84,13 +83,6 @@ jobs:
             new_tag="v1"
           fi
           echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
-
-      - name: Log in to Docker Hub
-        if: contains(github.event.head_commit.message, '[build-image]')
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & Push FlaskApp
         if: contains(github.event.head_commit.message, '[build-image]')
