--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -70,11 +70,24 @@ jobs:
           fi
           echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
 
-      - name: Get latest tag for MySQL
+      - name: Get latest tag for MySQL (Private Repo)
         if: contains(github.event.head_commit.message, '[build-image]')
         id: mysql_tag
         run: |
-          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=1 | jq -r '.results[0].name')
+          # Get JWT token after login
+          token=$(curl -s -H "Content-Type: application/json" \
+            -X POST \
+            -d '{"username": "'${{ secrets.DOCKER_USERNAME }}'", "password": "'${{ secrets.DOCKER_PASSWORD }}'"}' \
+            https://hub.docker.com/v2/users/login/ | jq -r .token)
+
+          # Get latest tag using the token
+          latest_tag=$(curl -s -H "Authorization: JWT $token" \
+            "https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=100" \
+            | jq -r '.results[].name' \
+            | grep -E '^v[0-9]+$' \
+            | sort -V \
+            | tail -n 1)
+
           echo "Latest tag: $latest_tag"
           if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
             num=${latest_tag#v}
