--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -56,66 +56,25 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Get latest tag for FlaskApp
+      - name: Extract tags from commit message
         if: contains(github.event.head_commit.message, '[build-image]')
-        id: flaskapp_tag
+        id: tags
         run: |
-          latest_tag=$(curl -s https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-flaskapp/tags?page_size=1 | jq -r '.results[0].name')
-          echo "Latest tag: $latest_tag"
-          if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
-            num=${latest_tag#v}
-            new_tag="v$((num+1))"
-          else
-            new_tag="v1"
-          fi
-          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
-
-      - name: Get latest tag for MySQL (Private Repo)
-        if: contains(github.event.head_commit.message, '[build-image]')
-        id: mysql_tag
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          # Login and get JWT token
-          token=$(curl -s -H "Content-Type: application/json" -X POST \
-            -d "{\"username\": \"${DOCKER_USERNAME}\", \"password\": \"${DOCKER_PASSWORD}\"}" \
-            https://hub.docker.com/v2/users/login/ | jq -r .token)
-
-          if [ -z "$token" ] || [ "$token" = "null" ]; then
-            echo "❌ Failed to get JWT token for Docker Hub"
-            exit 1
-          fi
-
-          # Get latest version tag
-          latest_tag=$(curl -s -H "Authorization: JWT $token" \
-            "https://hub.docker.com/v2/repositories/tarekadel/k8s-flask-mysql-database/tags?page_size=100" \
-            | jq -r '.results[].name' \
-            | grep -E '^v[0-9]+$' \
-            | sort -V \
-            | tail -n 1)
-
-          echo "Latest tag from DB repo: $latest_tag"
-          if [[ "$latest_tag" =~ ^v[0-9]+$ ]]; then
-            num=${latest_tag#v}
-            new_tag="v$((num+1))"
-          else
-            new_tag="v1"
-          fi
-
-          echo "✅ New DB tag will be: $new_tag"
-          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
-
+          msg="${{ github.event.head_commit.message }}"
+          flask_tag=$(echo "$msg" | grep -oP 'flask:v[0-9]+' | cut -d':' -f2)
+          db_tag=$(echo "$msg" | grep -oP 'db:v[0-9]+' | cut -d':' -f2)
+          echo "flask_tag=$flask_tag" >> $GITHUB_OUTPUT
+          echo "db_tag=$db_tag" >> $GITHUB_OUTPUT
 
       - name: Build & Push FlaskApp
         if: contains(github.event.head_commit.message, '[build-image]')
         run: |
-          docker build -t tarekadel/k8s-flask-mysql-flaskapp:${{ steps.flaskapp_tag.outputs.new_tag }} k8s/base/flaskapp
-          docker push tarekadel/k8s-flask-mysql-flaskapp:${{ steps.flaskapp_tag.outputs.new_tag }}
+          docker build -t tarekadel/k8s-flask-mysql-flaskapp:${{ steps.tags.outputs.flask_tag }} k8s/base/flaskapp
+          docker push tarekadel/k8s-flask-mysql-flaskapp:${{ steps.tags.outputs.flask_tag }}
 
       - name: Build & Push MySQL
         if: contains(github.event.head_commit.message, '[build-image]')
         run: |
-          docker build -t tarekadel/k8s-flask-mysql-database:${{ steps.mysql_tag.outputs.new_tag }} k8s/base/database
-          docker push tarekadel/k8s-flask-mysql-database:${{ steps.mysql_tag.outputs.new_tag }}
+          docker build -t tarekadel/k8s-flask-mysql-database:${{ steps.tags.outputs.db_tag }} k8s/base/database
+          docker push tarekadel/k8s-flask-mysql-database:${{ steps.tags.outputs.db_tag }}
 
