--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITTHUB_TOKEN }}
 
       - name: Set up Python "3.10"
         uses: actions/setup-python@v4
@@ -89,7 +89,7 @@ jobs:
       - name: Commit & Push changes
         if: contains(github.event.head_commit.message, '[build-image]')
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITTHUB_TOKEN }}
         run: |
           git config user.name "tarek-code"
           git config user.email "tarekadel314@gmail.com"
