--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -83,8 +83,8 @@ jobs:
         if: contains(github.event.head_commit.message, '[build-image]')
         run: |
           echo "Updating production manifests with new tags..."
-          sed -i "s|image: tarekadel/k8s-flask-mysql-flaskapp:.*|image: tarekadel/k8s-flask-mysql-flaskapp:${{ steps.tags.outputs.flask_tag }}|g" k8s/overlays/production/flask-deployment-prod.yaml
-          sed -i "s|image: tarekadel/k8s-flask-mysql-database:.*|image: tarekadel/k8s-flask-mysql-database:${{ steps.tags.outputs.db_tag }}|g" k8s/overlays/production/mysql-statefulset-prod.yaml
+          sed -i "s|newTag: .* # flask|newTag: \"${{ steps.tags.outputs.flask_tag }}\" # flask|g" k8s/overlays/production/kustomization.yaml
+          sed -i "s|newTag: .* # mysql|newTag: \"${{ steps.tags.outputs.db_tag }}\" # mysql|g" k8s/overlays/production/kustomization.yaml
 
       - name: Commit & Push changes
         if: contains(github.event.head_commit.message, '[build-image]')
